--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,107 +1,192 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+    font-family: 'Quicksand';
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+/* Navigation Bar */
+.nav-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 153, 255);
+    height: 3.5em;
+}
+/*rgb(0, 153, 255)*/
+.nav-image {
+    position: absolute;
+    left: 30px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.nav-link {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    color: white;
+    padding: 0.5em;
+    width: 8em;
+    font-weight: 500;
+    border: 2px solid transparent;
+    padding-right: 1px solid white;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.nav-link:hover {
+    border: 2px solid white;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.nav-profile {
+    height: 3em;
+    width: 3em;
+    position: absolute;
+    top: 5px;
+    background-color: rgb(0, 153, 255);
+    right: 30px;
+    border-radius: 50%;
+}
+
+.nav-profile:hover {
+    background-color: white;
+}
+
+/* Nav Bar End*/
+
+/* Nav category options*/
+
+.nav-category-options {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 6em;
+}
+
+.nav-category-options-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 16em;
+    height: 2.8em;
+    margin: 2em;
+    border: 1px solid rgb(216, 216, 216);
+}
+
+.nav-category-options-title {
+    font-size: 20px;
+    padding: 0.05em;
+    border: 1px solid transparent;
+    color: black;
+}
+
+.nav-category-options-container:hover {
+    border: 1px solid rgb(172, 172, 172);
+}
+
+.nav-category-options-container:hover .nav-category-options-title {
+    border-bottom: 1px solid rgb(216, 216, 216);
+}
+
+/* Nav Category End */
+
+/* Chronicles Section */
+
+.chronicle-category-options {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5em;
+}
+
+.chronicle-category-option {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3.5em;
+    width: 15.2em;
+    border: 1px solid rgb(216, 216, 216);
+    border-top-left-radius: 40%;
+    border-top-right-radius: 40%;
+}
+
+.selected-chronicle-category {
+    border-bottom: 0;
+    /*background-color:rgb(109, 186, 207);*/
+}
+
+.selected-chronicle-category p {
+    /*color: white !important;*/
+    border-bottom: 1px solid black;
+}
+
+.chronicle-category-options p {
+    font-size: 20px;
+    color: black;
+}
+
+.user-profile-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.user-chronicles-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-left: 1px solid rgb(216, 216, 216);
+    border-right: 1px solid rgb(216, 216, 216);
+    width: 76em;
+    height: 50em;
+    margin-top: -12px;
+    /*background-color: rgb(109, 186, 207);*/
+}
+
+.user-chronicles-container-section {
+    display: grid;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: repeat(5, 1fr);
+    width: 80%;
+    margin: 2em;
+}
+
+.user-chronicles-container-section h1{
+    font-weight: 300;
+    grid-row: 1;
+    grid-column: 1/6;
+    border-bottom: 1px solid rgb(172, 172, 172);
+}
+
+.user-chronicles-container-category {
+    margin-top: 1em;
+    font-size: 18px;
+}
+
+.pOne {
+    grid-column: 1/3;
+}
+
+.chronicle-status-list {
+    grid-row: 3;
+    grid-column: 1/6;
+}
+
+.chronicle-status-list li {
+    display: flex;
+    align-items:stretch ;
+}
+
+.chronicle-status-list-info {
+    padding: 0.2em;
+    display: flex;
+    font-size: 18px;
+    border: 1px solid rgb(172, 172, 172);
+    width: 20%;
+}
+
+.chronicle-title {
+    width: 40%;
 }
