--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
+@font-face {
+    font-family: 'magic';
+    src: url("/fonts/magic.ttf");
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -15,12 +20,15 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(0, 153, 255);
-    height: 3.5em;
+    height: 3.7em;
 }
-/*rgb(0, 153, 255)*/
-.nav-image {
+
+.nav-bar-title {
+    font-family: 'magic';
+    color: white;
     position: absolute;
     left: 30px;
+    font-size: 52px;
 }
 
 .nav-link {
@@ -219,4 +227,3 @@
 .pFour {
     padding-left: 0.1em;
 }
-
