--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -5,6 +5,11 @@
     src: url("/fonts/magic.ttf");
 }
 
+@font-face {
+    font-family: 'copyduck';
+    src: url("/fonts/copyduck.ttf");
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -226,4 +231,59 @@
 
 .pFour {
     padding-left: 0.1em;
+}
+
+.login-page {
+    position: absolute;
+    top:  40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    width: 25em;
+    border: 1px solid rgb(172, 172, 172);
+    padding: 0.5em;
+}
+
+.login-page h1 {
+    font-family: 'copyduck';
+    margin-top: 1em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    height: 1.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    width: 90%;
+    color: rgb(0, 153, 255);
+}
+
+.login-page input, textarea {
+    height: 3em;
+    width: 90%;
+    margin: 1em;
+    border: 1px solid transparent;
+    outline: none;
+    border-bottom: 1px solid rgb(172, 172, 172);
+    font-size: 18px;
+    padding: 0.5em;
+    resize: none;
+}
+
+.login-page button {
+    height: 3em;
+    width: 45%;
+    background-color: rgb(0, 153, 255);
+    color: white;
+    font-size: 20px;
+    font-weight: 900;
+    margin-top: 1.5em;
+    cursor: pointer;   
+    width: 90%;
+    border: 1px solid rgb(216, 216, 216);
+    background-image: linear-gradient(to right, rgb(0, 153, 255), rgb(81, 17, 255));
+    margin-bottom: 2em;
 }
