--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -120,10 +120,6 @@
     border: 1px solid rgb(172, 172, 172);
 }
 
-.nav-category-options-container:hover .nav-category-options-title {
-    border-bottom: 1px solid rgb(216, 216, 216);
-}
-
 /* Nav Category End */
 
 /* Chronicles Section */
@@ -176,7 +172,7 @@
     border-left: 1px solid rgb(216, 216, 216);
     border-right: 1px solid rgb(216, 216, 216);
     width: 76em;
-    height: 50em;
+    height: auto;
     margin-top: -12px;
     /*background-color: rgb(109, 186, 207);*/
 }
@@ -184,7 +180,7 @@
 .user-container-section {
     display: grid;
     grid-template-rows: auto auto auto;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: 346px 158px 158px 156px;
     width: 80%;
     margin: 2em;
 }
@@ -198,11 +194,8 @@
 
 .user-container-category {
     margin-top: 1em;
+    margin-left: 1.5px;
     font-size: 18px;
-}
-
-.pOne {
-    grid-column: 1/3;
 }
 
 .chronicle-status-list {
@@ -210,32 +203,109 @@
     grid-column: 1/7;
 }
 
-.chronicle-status-list li {
+.user-container-overview {
+    position: relative;
     display: flex;
-    align-items:stretch ;
+    align-items: stretch;
 }
 
-.chronicle-status-list-info {
+.user-chronicle-info {
     padding: 0.5em;
     font-size: 18px;
     outline: 1px solid rgb(172, 172, 172);
     margin-top: 1px;
     margin-left: 1px;
-    width: 20%;
+    width: 18%;
     overflow-wrap: break-word;
+}
+
+.chronicle-list-broader {
+    position: absolute;
+    cursor: pointer;
+    background-color: white;
+    right: -100px;
+    top: 3px;
+    border-radius: 50%;
+    width: 39px;
+    height: 39px;
+    border: 1px solid rgb(119, 119, 119);
+}
+
+.chronicle-list-broader::before {
+    content: "\274c";
+    border-radius: 100%;
+    padding: 0.4em;
+    color: transparent;
+    text-shadow: 0 0 0 rgb(119, 119, 119);
+}
+
+.chronicle-list-broader:hover {
+    background-color: rgb(255, 8, 0);
+}
+
+.chronicle-list-broader:hover::before  {
+    text-shadow: 0 0 0 white;
+
+}
+
+.chronicle-list-more-info-button {
+    position: absolute;
+    right: -50px;
+    top: 3px;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.4em;
+    width: 1em;
+    height: 1em;
+    padding-bottom: 6px;
+    border: 1px solid rgb(119, 119, 119);
+    background-color: white;
+    border-radius: 100%;
+    color: transparent;
+    text-shadow: 0 0 0 rgb(119, 119, 119);
+    cursor: pointer;
+}
+
+.chronicle-list-more-info-button:hover {
+    background-color: rgb(0, 153, 255);
+    color: white;
+}
+
+.chronicle-list-more-info {
+    width: 100.1%;
+    margin-bottom: 1em;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: 0.2em;
+    padding-bottom: 2em;
+    border: 1px solid rgb(172, 172, 172);
 }
 
 .chronicle-title {
     width: 40%;
 }
 
+.user-chronicle-text {
+    font-size: 18px;
+    margin: 0.5em;
+}
+
+.user-chronicle-textarea {
+    height: 7em;
+    width: 98%;
+    margin-left: 0.5em;
+    outline: none;
+    border: 1px solid rgb(172, 172, 172);
+    font-size: 18px;
+    padding: 0.5em;
+    resize: none;
+}
+
 /* user-history */
 .user-history-section {
-    display: grid;
-    grid-template-rows: auto auto auto;
-    grid-template-columns: repeat(6, 1fr);
-    width: 80%;
-    margin: 2em;
+
 }
 
 .history {
@@ -284,7 +354,7 @@
     color: rgb(0, 153, 255);
 }
 
-.login-page input, textarea {
+.login-page input, .login-page textarea {
     height: 3em;
     width: 90%;
     margin: 1em;
