--- a/frontend/public/about/about.css
+++ b/frontend/public/about/about.css
@@ -27,7 +27,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(0, 153, 255);
+    background-color: rgb(255, 106, 235);
     height: 3.7em;
 }
 
@@ -83,12 +83,12 @@
     top: 5px;
     right: 30px;
     border: 3px solid white;
-    background-color: rgb(30, 71, 255);
+    background-color: rgb(212, 0, 184);
 }
 
 .nav-logout:hover {
     cursor: pointer;
-    background-color: rgb(56, 30, 255);
+    background-color: rgb(172, 0, 72);
 }
 
 /* Nav Bar End*/
@@ -160,13 +160,20 @@
     justify-content: center;
     font-size: 40px;
     width: 90%;
-    color: black;
+    color: rgb(94, 0, 94);
 }
 
 .about-section p {
+    text-align: center;
     font-weight: 700;
     margin-top: 2em;
     font-size: 24px;
-    color: black;
+    color: rgb(94, 0, 94);
     width: 80%;
+}
+
+.attribution {
+    position: absolute;
+    color: black;
+    bottom: -4em;
 }
