--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -191,7 +191,6 @@
 
 .filter-category-bottom {
     display: flex;
-    justify-content: start;
     align-items: center;
     margin-left: -0.5em;
 }
@@ -254,6 +253,164 @@
     font-size: 16px;
     text-align: center;
     padding-left: 0.4em;
+}
+
+.add-chronicles-page {
+    padding: 1.4em;
+    position: fixed;
+    z-index: 2;
+    width: 76em;
+    background-color: white;
+    border: 1px solid rgb(172, 172, 172);
+    height: 40em;
+}
+
+.add-chronicles-options {
+    margin-bottom: 1.5em;
+}
+
+.add-chronicles-search {
+    border-radius: 10px;
+    border: 1px solid rgb(119, 119, 119);
+    padding: 0.8em;
+    font-size: 16px;
+    width: 30%;
+    margin-left: 1em;
+    height: 2.5em;
+}
+
+.add-chronicles-section-container {
+    display: flex;
+    justify-content: space-around;
+    height: 90%;
+}
+
+.add-chronicles-section {
+    border: 1px solid rgb(172, 172, 172);
+    width: 100%;
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
+.add-chronicles-section h1{
+    font-size: 20px;
+    font-weight: 300;
+    text-align: center;
+    margin-top: 0.5em;
+}
+
+.add-section-attributes {
+    display: grid;
+    margin-left: 1em;
+    grid-template-columns: 16.9em 7.1em 1fr;
+    margin-top: 1em;
+    font-size: 18px;
+}
+
+.add-chronicles-content {
+    margin: 1em;
+    margin-top: 0.4em;
+}
+
+.add-chronicle-item {
+    display: grid;
+    grid-template-columns: 19em 8em 1fr 1fr;
+    grid-template-rows: minmax(2.7em, 2.7em);
+}
+
+.add-chronicle-additional {
+    position: relative;
+    left: -0.3%;
+    border: 1px solid rgb(172, 172, 172);
+    width: 160%;
+    margin-right: 10em;
+}
+
+.add-chronicle-item-top {
+    border: 1px solid rgb(172, 172, 172);
+    padding-left: 0.6em;
+    padding-right: 0.6em;
+    display: flex;
+    font-size: 16px;
+    align-items: center;
+    margin-left: -1px;
+    margin-bottom: -1px;
+}
+
+.add-chronicle-item-top-button {
+    background-color: white;
+    border: 1px solid rgb(172, 172, 172);
+    margin-top: 0.1em;
+    margin-bottom: 0.4em;
+    border-radius: 100%;
+    height: 1.4em;
+    width: 1.4em;
+    font-size: 28px;
+    margin-left: 0.3em;
+    color: rgb(172, 172, 172);
+}
+
+.add-chronicle-bottom-first {
+    display: grid;
+    margin-left: 0.7em;
+    grid-template-columns: 3.5em 8em 4em 5em 4em 4em;
+    margin-top: 1em;
+}
+
+.add-chronicle-bottom-first p {
+    font-size: 16px;
+    display: flex;
+    margin-right: 0.2em;
+    align-items: center;
+}
+
+.add-chronicle-bottom-first select {
+    width: 8.5em;
+    height: 2.5em;
+    font-size: 14px;
+}
+
+.add-chronicle-bottom-first input {
+    width: 5em;
+    height: 2.5em;
+    font-size: 14px;
+    padding: 0.4em;
+}
+
+.add-chronicle-item-middle {
+    font-size: 16px;
+    margin-left: 0.7em;
+    margin-top: 1em;
+    margin-bottom: 0.3em;
+}
+
+.add-chronicle-textarea {
+    width: 96%;
+    height: 5em;
+    margin-left: 0.7em;
+    resize: none;
+    font-size: 16px;
+    padding: 0.4em;
+    border: 1px solid rgb(172, 172, 172);
+    outline: none;
+}
+
+.add-chronicle-textarea::selection {
+    border: 1px solid rgb(172, 172, 172);
+}
+
+.add-chronicles-item-bottom {
+    display: flex;
+    justify-content: center;
+    width: 100%;    
+}
+
+.add-chronicle-button {
+    width: 9em;
+    height: 2.5em;
+    margin: 1em;
+    background-color: white;
+    border: 1px solid rgb(172, 172, 172);
 }
 
 .user-container-section {
