--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -121,8 +121,6 @@
 
 .nav-category-options-title {
     font-size: 20px;
-    padding: 0.05em;
-    border: 1px solid transparent;
     color: black;
 }
 
@@ -816,3 +814,151 @@
     font-size: 14px;
     padding: 0.4em;
 }
+
+/* Chronicle Section */
+
+.chronicles-nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 60%;
+    margin: auto;
+    margin-top: 1.5em;
+}
+
+.chronicles-nav-bar-option {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: black;
+    width: 16em;
+    height: 2.2em;
+    border: 1px solid rgb(172, 172, 172);
+}
+
+.chronicle-page {
+    margin: auto;
+    margin-top: 1em;
+    width: 60.1%;
+    display: grid;
+    grid-template-columns: 19.5em 1fr;
+    border: 1px solid rgb(172, 172, 172);
+}
+
+.chronicle-page h1 {
+    grid-column: 1/3;
+    background-color: rgb(0, 153, 255);
+    color: white;
+    padding-left: 0.5em;
+}
+
+.stats-general {
+    margin: 1.5em;
+}
+
+.stats-general p {
+    border: 1px solid rgb(172, 172, 172);
+    font-size: 17px;
+    padding: 0.4em;
+    margin-bottom: -1px;
+    width: 16em;
+}
+
+.synopsis {
+    margin: 1.3em;
+    margin-left: 0.8em;
+    resize: none;
+    font-size: 18px;
+    padding: 0.4em;
+    border: 1px solid rgb(172, 172, 172);
+}
+
+.stats-detailed {
+    border: 1px solid rgb(172, 172, 172);
+    margin: 1.3em;
+    margin-top: 0.4em;
+    margin-bottom: 1.8em;
+    font-size: 18px;
+    grid-column: 1/3;
+    padding: 0.4em;
+}
+
+.chronicle-attribute-list {
+    margin-left: -0.25em;
+}
+
+.chronicle-attribute-list li{
+    font-size: 16px;
+    display: inline-block;
+    border-radius: 10px;
+    background-color: rgb(196, 233, 255);
+    color: black;
+    margin: 0.25em;
+    padding: 0.3em;
+}
+
+.chronicle-reviews {
+    margin: auto;
+    margin-top: 1em;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.chronicle-review {
+    display: grid;
+    width: 100%;
+    grid-template-columns: 4fr 1fr;
+    border-top: 1px solid rgb(172, 172, 172);
+    border-bottom: 1px solid rgb(172, 172, 172);
+    padding: 1.5em;
+    padding-bottom: 0.5em;
+    margin-bottom: -1px;
+}
+
+.chronicle-review-username {
+    font-weight: 300;
+    font-size: 22px;
+}
+
+.chronicle-review-date {
+    font-size: 17px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: end;
+}
+
+.chronicle-review-text {
+    margin-top: 0.3em;
+    grid-column: 1/3;
+    height: 15em;
+    resize: none;
+    padding: 0.6em;
+    font-size: 17px;
+    border: 1px solid rgb(172, 172, 172);
+    overflow-y: hidden;
+}
+
+.agree-disagree {
+    grid-column: 2/3;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 98%;
+}
+
+.score {
+    margin: 0.4em;
+    font-size: 22px;
+}
+
+.arrow {
+    font-size: 40px;
+    transform: scale(1.6, 1);
+}
+
+/* End of Chronicle Section */
+
