--- a/extension/index.css
+++ b/extension/index.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
+@font-face {
+    font-family: 'coffee';
+    src: url("/coffee.ttf");
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -12,26 +17,24 @@
 #extension-popup {
     width: 32em;
     height: 45em;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 3em ;
+    display: flex;
+    flex-direction: column;
 }
 
 .grid-website {
     font-size: 1.8em;
     background-color: rgb(0, 153, 255);
     color: white;
-    grid-column: 1/3;
-    height: 2.6em;
     padding-top: 0.2em;
+    padding-bottom: 0.2em;
     text-align: center;
-    border: 10px solid white;
+    margin: 10px;
 }
 
 .grid-info {
-    grid-column: 1/3;
+    height: 100%;
     margin: 10px;
-    margin-top: 1.4em;
+    margin-top: 0em;
     display: flex;
     flex-direction: column;
     border: 1px solid rgb(206, 206, 206);
@@ -111,20 +114,103 @@
     width: 8em;
 }
 
+.extension-options {
+    margin: 10px;
+    margin-top: 0em;
+}
+
 .extension-button{
+    width: 32.1%;
     color: white;
     background-color: rgb(0, 153, 255);
     font-size: 18px;
     height: 2.4em;
-    margin-left: 9px;
-    margin-right: 9px;
+    margin-left: 1px;
+    margin-right: 1px;
     border: 1px solid white;
     cursor: pointer;
 }
 
 .extension-attribution {
-    grid-column: 1/3;
     font-size: 16px;
     padding: 8px;
     margin: 5px;
 }
+
+.invalid-message {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    font-size: 24px;
+}
+
+.invalid-options {
+    position: absolute;
+    bottom: 10%;
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+.login-page {
+    position: absolute;
+    top: 53.5%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    width: 30em;
+    height: 39em;
+    border: 1px solid rgb(172, 172, 172);
+    padding: 0.5em;
+}
+
+.login-page h1 {
+    font-family: 'coffee';
+    margin-top: 0.5em;
+    height: 1.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    width: 90%;
+    color: rgb(0, 153, 255);
+}
+
+.login-page input, .login-page textarea {
+    height: 3em;
+    width: 90%;
+    margin: 0.8em;
+    border: 1px solid transparent;
+    outline: none;
+    border-bottom: 1px solid rgb(172, 172, 172);
+    font-size: 18px;
+    padding: 0.5em;
+    resize: none;
+    overflow: hidden;
+}
+
+.login-page-submit, .register-page-submit {
+    height: 3em;
+    width: 45%;
+    background-color: rgb(0, 153, 255);
+    color: white;
+    font-size: 20px;
+    font-weight: 900;
+    margin-top: 1em;
+    cursor: pointer;   
+    width: 90%;
+    border: 1px solid rgb(216, 216, 216);
+    background-image: linear-gradient(to right, rgb(0, 153, 255), rgb(81, 17, 255));
+    margin-bottom: 0.5em;
+}
+
+.login-page p {
+    position: absolute;
+    bottom: 4%;
+    font-size: 16px;
+}
+
