--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -928,13 +928,14 @@
     font-size: 17px;
     display: flex;
     justify-content: flex-end;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .chronicle-review-text {
     margin-top: 0.3em;
     grid-column: 1/3;
-    height: 15em;
+    height: 15.3em;
+    line-height: 30px; /* 4px +12px + 4px */
     resize: none;
     padding: 0.6em;
     font-size: 17px;
